src/BootstrapBlazor/Components/Table/Table.css
/* ... */
.table-striped > tbody > tr.is-master:nth-of-type(4n+1) {
    --bs-table-accent-bg: var(--bs-table-striped-bg);
    color: var(--bs-table-striped-color);
}

.table-wrapper .empty-text {
    padding: 1rem;
}

form .table .table-cell > .form-label {
    display: none;
}

form .table .table-cell > textarea {
    width: 100%;
}

.table-search {
    margin-bottom: .5rem;
}

.table-excel .table-cell > input.form-control,
.table-excel .table-cell .datetime-picker,
.table-excel .table-cell .select {
    min-width: 120px;
}

.table-excel tbody .table-cell textarea.form-control {
    min-width: 200px;
}

.table-excel-toolbar {
    display: none;
    position: absolute;
}

.table-excel.table > :not(caption):not(thead) > * > * {
    padding: 0;
}

.table-excel tbody .table-cell > .form-check {
    padding: 6px 8px;
}

.table-excel tbody .table-cell .switch {
    padding: .375rem .1875rem;
    justify-content: center;
}

.table-excel .form-control,
.table-excel .table-cell .select .form-select {
    border: none;
    border-radius: 0;
    padding: .375rem .1875rem;
}

.table-excel .table-cell .select {
    width: 100%;
}

.table-excel .datetime-picker-input {
    padding-left: 2rem;
}

.table-excel .datetime-picker-input-icon {
    line-height: 32px;
}

.table-excel.table tbody tr.active {
    background-color: transparent;
}

.table-cell.text-center input {
    text-align: center;
}

.table-cell.text-end input {
    text-align: right;
}

